# foodtech_clients

./: README.md  pyproject.toml
docs/: MODULES.md  README.md
docs/foodtech_clients/: delivery_club.md  index.md  papa_johns.md
foodtech_clients/: __init__.py  delivery_club.py  papa_johns.py
