[tool.poetry]
name = "foodtech_clients"
version = "0.1.0"
description = "Clients for food delivery"
authors = ["Vlad Sudakov <vladsudakov5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
furl = "^2.1.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
